# poc_mineru_interface

./: .dockerignore  .gitignore  ASYNC_MODE_SUMMARY.md  README.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  SECURITY.md  pyproject.toml
backend/docs/: async-mode.md  dify-tool.md
backend/src/: main.py
backend/src/api/: health.py  jobs.py  middleware.py  parse.py  validators.py
backend/src/config/: settings.py
backend/src/models/: job.py
backend/src/observability/: logging.py  metrics.py
backend/src/services/: async_job_service.py  mineru_adapter.py  output_builder.py  parse_service.py  storage.py  webhook_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_dify_reliability.py  test_dify_tool.py  test_health.py  test_parse_errors.py
backend/tests/integration/: test_async_jobs.py  test_observability.py  test_ui_flow.py
backend/tests/perf/: test_latency.py
docs/: perf-notes.md
docs/runbooks/: mineru-parse.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/components/: UploadForm.jsx
frontend/src/pages/: index.jsx
frontend/src/services/: api.js
frontend/tests/e2e/: upload.spec.js
specs/001-mineru-web-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+2 files in other folders)
