[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru-interface"
version = "0.1.0"
description = "Miner-U synchronous parse service and web interface"
authors = [{name = "MinerU Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "loguru>=0.7.2,<1.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "python-multipart>=0.0.7",
    "mineru[core]==2.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
    "anyio>=4.2.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

